--- a/index.html
+++ b/index.html
@@ -373,12 +373,12 @@
             </div>
             <div class="hero-stats">
                 <div class="stat-item">
-                    <span class="stat-number" data-count="15">0</span>
+                    <span class="stat-number" data-count="15">15+</span>
                     <span class="stat-label">Anni di Esperienza</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number" data-count="100">0</span>
-                    <span class="stat-label">% Clienti Soddisfatti</span>
+                    <span class="stat-number" data-count="100">100%</span>
+                    <span class="stat-label">Clienti Soddisfatti</span>
                 </div>
             </div>
         </div>
@@ -464,15 +464,15 @@
                     <div class="service-image">
                         <img src="https://images.unsplash.com/photo-1503387762-592deb58ef4e?w=600&q=75" alt="Ristrutturazione completa appartamenti Treviso" width="600" height="400" loading="lazy">
                         <div class="service-overlay">
-                            <a href="#contatti" class="service-btn">Richiedi Info</a>
+                            <a href="servizi/ristrutturazione-appartamenti.html" class="service-btn">Scopri di più</a>
                         </div>
                     </div>
                     <div class="service-content">
                         <div class="service-icon">
                             <i class="fas fa-home"></i>
                         </div>
-                        <h3>Ristrutturazione Appartamenti Treviso e Mestre</h3>
-                        <p>Ristrutturazione completa appartamenti a Treviso, Mestre e Venezia. Dalla demolizione alla consegna chiavi in mano, con un unico referente per tutti i lavori.</p>
+                        <h3>Ristrutturazione Appartamenti</h3>
+                        <p>Ristrutturazione completa di appartamenti, dalla demolizione alla consegna chiavi in mano, con un unico referente per la gestione di tutti i lavori.</p>
                         <ul class="service-features">
                             <li><i class="fas fa-check"></i> Progettazione personalizzata</li>
                             <li><i class="fas fa-check"></i> Demolizioni e rifacimenti</li>
@@ -486,19 +486,19 @@
                     <div class="service-image">
                         <img src="https://images.unsplash.com/photo-1562259949-e8e7689d7828?w=600&q=75" alt="Pittura interni ed esterni Mestre Venezia" width="600" height="400" loading="lazy">
                         <div class="service-overlay">
-                            <a href="#contatti" class="service-btn">Richiedi Info</a>
+                            <a href="servizi/pittura-interni-esterni.html" class="service-btn">Scopri di più</a>
                         </div>
                     </div>
                     <div class="service-content">
                         <div class="service-icon">
                             <i class="fas fa-paint-roller"></i>
                         </div>
-                        <h3>Pittura Interni ed Esterni Treviso e Mestre</h3>
-                        <p>Servizi di pittura interni ed esterni a Treviso, Mestre e Venezia. Imbiancatura, tinteggiatura facciate, cappotto termico e finiture di pregio.</p>
+                        <h3>Pittura Interni ed Esterni</h3>
+                        <p>Servizi professionali di pittura per interni ed esterni, imbiancature, tinteggiature facciate, cappotto termico e finiture di decorative.</p>
                         <ul class="service-features">
                             <li><i class="fas fa-check"></i> Pittura interni e esterni</li>
                             <li><i class="fas fa-check"></i> Rifacimento facciate</li>
-                            <li><i class="fas fa-check"></i> Cappotto termico</li>
+                            <li><i class="fas fa-check"></i> Pittura decorativa</li>
                         </ul>
                     </div>
                 </div>
@@ -508,15 +508,15 @@
                     <div class="service-image">
                         <img src="https://images.unsplash.com/photo-1552321554-5fefe8c9ef14?w=600&q=75" alt="Ristrutturazione bagni e cucine Treviso" width="600" height="400" loading="lazy">
                         <div class="service-overlay">
-                            <a href="#contatti" class="service-btn">Richiedi Info</a>
+                            <a href="servizi/ristrutturazione-bagni-cucine.html" class="service-btn">Scopri di più</a>
                         </div>
                     </div>
                     <div class="service-content">
                         <div class="service-icon">
                             <i class="fas fa-bath"></i>
                         </div>
-                        <h3>Ristrutturazione Bagni e Cucine Treviso e Mestre</h3>
-                        <p>Ristrutturazione bagni e cucine a Treviso, Mestre e Venezia. Specializzati negli ambienti più importanti della casa con design moderno e funzionalità.</p>
+                        <h3>Ristrutturazione Bagni e Cucine</h3>
+                        <p>Ristrutturazione completa di bagni e cucine con soluzioni moderne, funzionali e materiali di qualità, curate in ogni dettaglio.</p>
                         <ul class="service-features">
                             <li><i class="fas fa-check"></i> Rifacimento completo</li>
                             <li><i class="fas fa-check"></i> Impianti idraulici</li>
@@ -530,15 +530,15 @@
                     <div class="service-image">
                         <img src="https://images.unsplash.com/photo-1616486338812-3dadae4b4ace?w=600&q=75" alt="Rinnovazione interni Venezia" width="600" height="400" loading="lazy">
                         <div class="service-overlay">
-                            <a href="#contatti" class="service-btn">Richiedi Info</a>
+                            <a href="servizi/rinnovazione-interni.html" class="service-btn">Scopri di più</a>
                         </div>
                     </div>
                     <div class="service-content">
                         <div class="service-icon">
                             <i class="fas fa-magic"></i>
                         </div>
-                        <h3>Rinnovazione Interni Treviso e Venezia</h3>
-                        <p>Rinnovazione interni a Treviso, Mestre e Venezia senza interventi invasivi. Pavimenti, rivestimenti, porte, infissi e arredi fissi per un look nuovo.</p>
+                        <h3>Rinnovazione Interni</h3>
+                        <p>Rinnovazione degli interni senza interventi invasivi: pavimenti, rivestimenti, porte, infissi e soluzioni di illuminazione per rinnovare gli spazi.</p>
                         <ul class="service-features">
                             <li><i class="fas fa-check"></i> Pavimenti e rivestimenti</li>
                             <li><i class="fas fa-check"></i> Porte e infissi</li>
