--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
     <meta name="robots" content="index, follow">
     <meta name="geo.region" content="IT-TV">
     <meta name="geo.placename" content="Treviso">
-    <link rel="canonical" href="https://casabon.netlify.app/">
+    <link rel="canonical" href="https://casabon.it/">
+
+    <!-- Sitemap -->
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml">
+
     <!-- iubenda privacy policy -->
     <script type="text/javascript" src="https://embeds.iubenda.com/widgets/0295c41b-9938-4eb1-b105-1538c4b7f811.js"></script>
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://casabon.netlify.app/">
+    <meta property="og:url" content="https://casabon.it/">
     <meta property="og:title" content="Ristrutturazioni Treviso, Mestre e Venezia | Casabon Ristrutturazioni">
     <meta property="og:description" content="Ristrutturazioni a Treviso, Mestre e Venezia. Servizi di pittura, ristrutturazione bagni, cucine, appartamenti. Preventivi gratuiti. 15+ anni di esperienza.">
-    <meta property="og:image" content="https://casabon.netlify.app/images/og-image.jpg">
+    <meta property="og:image" content="https://casabon.it/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
     <meta property="og:site_name" content="Casabon Ristrutturazioni">
 
@@ -28,7 +32,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ristrutturazioni Treviso, Mestre e Venezia | Casabon Ristrutturazioni">
     <meta name="twitter:description" content="Ristrutturazioni a Treviso, Mestre e Venezia. Pittura, bagni, cucine, appartamenti. Preventivi gratuiti.">
-    <meta name="twitter:image" content="https://casabon.netlify.app/images/og-image.jpg">
+    <meta name="twitter:image" content="https://casabon.it/images/og-image.jpg">
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
@@ -73,7 +77,7 @@
         "@type": "HomeAndConstructionBusiness",
         "name": "Casabon Ristrutturazioni",
         "description": "Ristrutturazioni a Treviso, Mestre e Venezia specializzata in pittura, ristrutturazione bagni, cucine, appartamenti e rinnovazione interni.",
-        "url": "https://casabon.netlify.app",
+        "url": "https://casabon.it",
         "telephone": "+39 327 410 5610",
         "email": "info@casabon.it",
         "address": {
@@ -187,8 +191,8 @@
             "https://www.facebook.com/casabon",
             "https://www.instagram.com/casabon"
         ],
-        "image": "https://casabon.netlify.app/images/og-image.jpg",
-        "logo": "https://casabon.netlify.app/favicon.svg"
+        "image": "https://casabon.it/images/og-image.jpg",
+        "logo": "https://casabon.it/favicon.svg"
     }
     </script>
 
@@ -255,10 +259,10 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Casabon Ristrutturazioni",
-        "url": "https://casabon.netlify.app/",
+        "url": "https://casabon.it/",
         "potentialAction": {
             "@type": "SearchAction",
-            "target": "https://casabon.netlify.app/?s={search_term_string}",
+            "target": "https://casabon.it/?s={search_term_string}",
             "query-input": "required name=search_term_string"
         }
     }
@@ -272,37 +276,37 @@
             {
                 "@type": "SiteNavigationElement",
                 "name": "Home",
-                "url": "https://casabon.netlify.app/#home"
+                "url": "https://casabon.it/#home"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Chi Siamo",
-                "url": "https://casabon.netlify.app/#chi-siamo"
+                "url": "https://casabon.it/#chi-siamo"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Servizi",
-                "url": "https://casabon.netlify.app/#servizi"
+                "url": "https://casabon.it/#servizi"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Perché Noi",
-                "url": "https://casabon.netlify.app/#perche-noi"
+                "url": "https://casabon.it/#perche-noi"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Recensioni",
-                "url": "https://casabon.netlify.app/#recensioni"
+                "url": "https://casabon.it/#recensioni"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Guide",
-                "url": "https://casabon.netlify.app/guide.html"
+                "url": "https://casabon.it/guide.html"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Contatti",
-                "url": "https://casabon.netlify.app/#contatti"
+                "url": "https://casabon.it/#contatti"
             }
         ]
     }
