--- a/servizi/rinnovazione-interni.html
+++ b/servizi/rinnovazione-interni.html
@@ -10,14 +10,14 @@
     <meta name="keywords" content="rinnovazione interni, rinnovo casa, pavimenti, porte, infissi, illuminazione LED, Treviso, Mestre, Venezia">
     <meta name="author" content="Casabon Ristrutturazioni">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://casabon.netlify.app/servizi/rinnovazione-interni.html">
+    <link rel="canonical" href="https://casabon.it/servizi/rinnovazione-interni.html">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://casabon.netlify.app/servizi/rinnovazione-interni.html">
+    <meta property="og:url" content="https://casabon.it/servizi/rinnovazione-interni.html">
     <meta property="og:title" content="Rinnovazione Interni Senza Interventi Invasivi | Casabon">
     <meta property="og:description" content="Rinnovazione interni a Treviso, Mestre e Venezia. Rinnova gli ambienti senza ristrutturazioni complete.">
-    <meta property="og:image" content="https://casabon.netlify.app/images/og-image.jpg">
+    <meta property="og:image" content="https://casabon.it/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
 
     <!-- Favicon -->
