--- a/servizi/ristrutturazione-appartamenti.html
+++ b/servizi/ristrutturazione-appartamenti.html
@@ -10,14 +10,14 @@
     <meta name="keywords" content="ristrutturazione appartamenti, ristrutturazione chiavi in mano, ristrutturazione Treviso, ristrutturazione Mestre, ristrutturazione Venezia">
     <meta name="author" content="Casabon Ristrutturazioni">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://casabon.netlify.app/servizi/ristrutturazione-appartamenti.html">
+    <link rel="canonical" href="https://casabon.it/servizi/ristrutturazione-appartamenti.html">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://casabon.netlify.app/servizi/ristrutturazione-appartamenti.html">
+    <meta property="og:url" content="https://casabon.it/servizi/ristrutturazione-appartamenti.html">
     <meta property="og:title" content="Ristrutturazione Appartamenti Chiavi in Mano | Casabon">
     <meta property="og:description" content="Ristrutturazione appartamenti chiavi in mano a Treviso, Mestre e Venezia. Un unico referente, tempi certi e qualità garantita.">
-    <meta property="og:image" content="https://casabon.netlify.app/images/og-image.jpg">
+    <meta property="og:image" content="https://casabon.it/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
 
     <!-- Favicon -->
