--- a/guide.html
+++ b/guide.html
@@ -10,14 +10,14 @@
     <meta name="keywords" content="quanto costa ristrutturare bagno Treviso, costo ristrutturazione appartamento Mestre, bonus ristrutturazioni 2025, costo pittura casa Treviso, preventivo ristrutturazione Venezia">
     <meta name="author" content="Casabon Ristrutturazioni">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://casabon.netlify.app/guide.html">
+    <link rel="canonical" href="https://casabon.it/guide.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://casabon.netlify.app/guide.html">
+    <meta property="og:url" content="https://casabon.it/guide.html">
     <meta property="og:title" content="Guide Ristrutturazioni | Costi e Consigli | Casabon">
     <meta property="og:description" content="Guide complete su costi ristrutturazioni a Treviso e Mestre. Bonus 2025 e preventivi gratuiti.">
-    <meta property="og:image" content="https://casabon.netlify.app/images/og-image.jpg">
+    <meta property="og:image" content="https://casabon.it/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
 
     <!-- Favicon -->
