--- a/ristrutturazioni-mestre.html
+++ b/ristrutturazioni-mestre.html
@@ -12,17 +12,17 @@
     <meta name="robots" content="index, follow">
     <meta name="geo.region" content="IT-VE">
     <meta name="geo.placename" content="Mestre">
-    <link rel="canonical" href="https://casabon.netlify.app/ristrutturazioni-mestre.html">
+    <link rel="canonical" href="https://casabon.it/ristrutturazioni-mestre.html">
 
     <!-- iubenda privacy policy -->
     <script type="text/javascript" src="https://embeds.iubenda.com/widgets/0295c41b-9938-4eb1-b105-1538c4b7f811.js"></script>
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://casabon.netlify.app/ristrutturazioni-mestre.html">
+    <meta property="og:url" content="https://casabon.it/ristrutturazioni-mestre.html">
     <meta property="og:title" content="Ristrutturazioni Mestre | Casabon - Impresa Edile">
     <meta property="og:description" content="Ristrutturazioni a Mestre e Marghera. Appartamenti, condomini, bagni, cucine, pittura. Sopralluogo gratuito.">
-    <meta property="og:image" content="https://casabon.netlify.app/images/og-image.jpg">
+    <meta property="og:image" content="https://casabon.it/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
 
     <!-- Favicon -->
@@ -59,7 +59,7 @@
         "@type": "HomeAndConstructionBusiness",
         "name": "Casabon Ristrutturazioni Mestre",
         "description": "Impresa di ristrutturazioni a Mestre specializzata in appartamenti, condomini, bagni, cucine e pittura.",
-        "url": "https://casabon.netlify.app/ristrutturazioni-mestre.html",
+        "url": "https://casabon.it/ristrutturazioni-mestre.html",
         "telephone": "+39 327 410 5610",
         "email": "info@casabon.it",
         "address": {
