--- a/servizi/pittura-interni-esterni.html
+++ b/servizi/pittura-interni-esterni.html
@@ -10,14 +10,14 @@
     <meta name="keywords" content="pittura interni, pittura esterni, imbiancatura, tinteggiatura, facciate, cappotto termico, Treviso, Mestre, Venezia">
     <meta name="author" content="Casabon Ristrutturazioni">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://casabon.netlify.app/servizi/pittura-interni-esterni.html">
+    <link rel="canonical" href="https://casabon.it/servizi/pittura-interni-esterni.html">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://casabon.netlify.app/servizi/pittura-interni-esterni.html">
+    <meta property="og:url" content="https://casabon.it/servizi/pittura-interni-esterni.html">
     <meta property="og:title" content="Pittura Interni ed Esterni Professionale | Casabon">
     <meta property="og:description" content="Pittura interni ed esterni professionale a Treviso, Mestre e Venezia. Imbiancature, facciate e finiture di qualità.">
-    <meta property="og:image" content="https://casabon.netlify.app/images/og-image.jpg">
+    <meta property="og:image" content="https://casabon.it/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
 
     <!-- Favicon -->
