--- a/servizi/ristrutturazione-bagni-cucine.html
+++ b/servizi/ristrutturazione-bagni-cucine.html
@@ -10,14 +10,14 @@
     <meta name="keywords" content="ristrutturazione bagno, ristrutturazione cucina, rifacimento bagno, rifacimento cucina, Treviso, Mestre, Venezia">
     <meta name="author" content="Casabon Ristrutturazioni">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://casabon.netlify.app/servizi/ristrutturazione-bagni-cucine.html">
+    <link rel="canonical" href="https://casabon.it/servizi/ristrutturazione-bagni-cucine.html">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://casabon.netlify.app/servizi/ristrutturazione-bagni-cucine.html">
+    <meta property="og:url" content="https://casabon.it/servizi/ristrutturazione-bagni-cucine.html">
     <meta property="og:title" content="Ristrutturazione Bagni e Cucine | Casabon">
     <meta property="og:description" content="Ristrutturazione bagni e cucine a Treviso, Mestre e Venezia. Funzionalità, design e comfort.">
-    <meta property="og:image" content="https://casabon.netlify.app/images/og-image.jpg">
+    <meta property="og:image" content="https://casabon.it/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
 
     <!-- Favicon -->
