--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Non Trovata | Casabon Ristrutturazioni</title>
+    <title>Pagina Non Trovata | Legno & Casa Roma</title>
     <meta name="robots" content="noindex, nofollow">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +33,7 @@
         .error-code {
             font-size: 150px;
             font-weight: 700;
-            background: linear-gradient(135deg, #f39c12, #e74c3c);
+            background: linear-gradient(135deg, #8B4513, #D4A853);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -68,12 +68,12 @@
             transition: all 0.3s ease;
         }
         .btn-primary {
-            background: linear-gradient(135deg, #f39c12, #e74c3c);
+            background: linear-gradient(135deg, #8B4513, #D4A853);
             color: #fff;
         }
         .btn-primary:hover {
             transform: translateY(-3px);
-            box-shadow: 0 10px 30px rgba(243, 156, 18, 0.3);
+            box-shadow: 0 10px 30px rgba(139, 69, 19, 0.3);
         }
         .btn-secondary {
             background: rgba(255,255,255,0.1);
@@ -109,7 +109,7 @@
             transition: color 0.3s ease;
         }
         .links a:hover {
-            color: #f39c12;
+            color: #D4A853;
         }
         .icon {
             font-size: 60px;
@@ -120,10 +120,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="icon"><i class="fas fa-hard-hat"></i></div>
+        <div class="icon"><i class="fas fa-hammer"></i></div>
         <div class="error-code">404</div>
         <h1>Pagina Non Trovata</h1>
-        <p>Ops! La pagina che stai cercando non esiste o potrebbe essere stata spostata. Torna alla homepage per scoprire i nostri servizi di ristrutturazione.</p>
+        <p>Ops! La pagina che stai cercando non esiste o potrebbe essere stata spostata. Torna alla homepage per scoprire i nostri servizi di falegnameria e ristrutturazione a Roma.</p>
         <div class="buttons">
             <a href="/" class="btn btn-primary">
                 <i class="fas fa-home"></i>
